// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WrapperComponent allows custom layouts 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      class="combobox-wrapper"
    >
      <div
        aria-controls="id_listbox"
        aria-readonly="true"
        class="dropdown__combobox"
        id="id"
        role="combobox"
        tabindex="0"
      >
        foo
      </div>
    </div>
    <div
      class="listbox-wrapper"
    >
      <ul
        class="dropdown__listbox"
        hidden=""
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="dropdown__option"
          id="id_option_foo"
          role="option"
          tabindex="-1"
        >
          <div>
            foo
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`blank renders a blank option 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Please select…
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option"
        id="id_option_blank"
        role="option"
        tabindex="-1"
      >
        <div>
          Please select…
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        <div>
          Apple
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        <div>
          Banana
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        <div>
          Orange
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects disabled sets the aria-disabled attribute 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-activedescendant="id_option_apple"
      aria-controls="id_listbox"
      aria-expanded="true"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      aria-activedescendant="id_option_apple"
      class="dropdown__listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        <div>
          Apple
        </div>
      </li>
      <li
        aria-disabled="true"
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        <div>
          Banana
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects group renders grouped options 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        <div>
          Apple
        </div>
      </li>
      <li
        aria-hidden="true"
        class="dropdown__group"
      >
        Citrus
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only"
        >
          Citrus
        </div>
        <div>
          Orange
        </div>
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_option_lemon"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only"
        >
          Citrus
        </div>
        <div>
          Lemon
        </div>
      </li>
      <li
        aria-hidden="true"
        class="dropdown__group"
      >
        Berry
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only"
        >
          Berry
        </div>
        <div>
          Raspberry
        </div>
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only"
        >
          Berry
        </div>
        <div>
          Strawberry
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects label renders a closed drop down 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        <div>
          Apple
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        <div>
          Banana
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        <div>
          Orange
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as array of numbers renders a closed drop down 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
       
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option"
        id="id_option_0"
        role="option"
        tabindex="-1"
      >
        <div>
          0
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_1"
        role="option"
        tabindex="-1"
      >
        <div>
          1
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_2"
        role="option"
        tabindex="-1"
      >
        <div>
          2
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_3"
        role="option"
        tabindex="-1"
      >
        <div>
          3
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as array of strings renders a closed drop down 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        <div>
          Apple
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        <div>
          Banana
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        <div>
          Orange
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as null renders a closed drop down with the option as an empty string 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
       
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option"
        id="id_option_"
        role="option"
        tabindex="-1"
      >
        <div />
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as undefined renders a closed drop down with the option as an empty string 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
       
    </div>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option"
        id="id_option_"
        role="option"
        tabindex="-1"
      >
        <div />
      </li>
    </ul>
  </div>
</div>
`;

exports[`options updating options updates the options 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-activedescendant="id_option_strawberry"
      aria-controls="id_listbox"
      aria-expanded="true"
      aria-readonly="true"
      class="dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Strawberry
    </div>
    <ul
      aria-activedescendant="id_option_strawberry"
      class="dropdown__listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="dropdown__option"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        <div>
          Strawberry
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        <div>
          Raspberry
        </div>
      </li>
      <li
        class="dropdown__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        <div>
          Banana
        </div>
      </li>
    </ul>
  </div>
</div>
`;
